Added location service and language support